# FS-Fast_MMSS

FS+Fast_MMSS data/src/: RandomGen.cpp  RandomGen.h
FS+Fast_MMSS/src/: CMakeLists.txt  ClosestSub.h  CompatiblePairs.h  CompressedLmers.h  IndexScheduler.h  MotifWorker.h  MyString.cpp  MyString.h  PairDist.h  StringSet.h  main.cpp  utils.cpp  utils.h
examples/: data13-4.out
